# bouldering-video-segmentation

./: .gitattributes  .gitignore  README.md  dataset_analysis.ipynb  example.inference.ipynb  experiments.ipynb  extractors.py  hubconf.py  pyproject.toml
assets/tables/: dataset-statistics.tex  features-extractors.tex  lstm.training-results.tex  mlp.training-results.tex  popular-datasets.presentation.tex  popular-datasets.tex  training-results.presentation.tex  training-results.tex
bouldering_video_segmentation/: inference.py
bouldering_video_segmentation/extractors/: __init__.py  actionclip_feature_extractor.py  clip_feature_extractor.py  dino_feature_extractor.py  feature_extractor.py  i3d_feature_extractor.py  ijepa_feature_extractor.py  resnet3d_feature_extractor.py  s3d_feature_extractor.py  slowfast_feature_extractor.py  swin_feature_extractor.py  vivit_feature_extractor.py  x3d_feature_extractor.py  yolo_feature_extractor.py
bouldering_video_segmentation/extractors/models/: asformer.py  i3d.py  s3dg.py
bouldering_video_segmentation/models/: __init__.py  full_video_lstm.py  video_segment_mlp.py
bouldering_video_segmentation/utils/: __init__.py  label_encoder.py  positional_encoding.py  to_millions.py  transformers.py
examples/: simple-inference.ipynb
experiments/: dataset_analysis.ipynb  full-video.experiments.ipynb  global.experiments.ipynb  lstm.experiments.ipynb  mlp.experiments.ipynb  mlp.filtering.experiments.ipynb  preliminary.ipynb  x3d.experiments.ipynb
experiments/helpers/: constants.py  extractors.py  filters.py  full_videos_features_dataset.py  misc.py  plots_formatting.py  preliminary.py  preparations.py  splits_generator.py  trainer.py  training_results_visualization.py  videos_to_indices.py
experiments/models/: __init__.py  full_video_lstm.py  video_segment_mlp.py
experiments/simplest/: complex_linear_classifier.py  simple_linear_classifier.py  trainer.py
extractors/: __init__.py  actionclip_feature_extractor.py  clip_feature_extractor.py  dino_feature_extractor.py  i3d_feature_extractor.py  ijepa_feature_extractor.py  resnet3d_feature_extractor.py  s3d_feature_extractor.py  slowfast_feature_extractor.py  swin_feature_extractor.py  vivit_feature_extractor.py  x3d_feature_extractor.py  yolo_feature_extractor.py
extractors-weights/: README.md
models/: asformer.py  s3d.py  s3dg.py
models-weights/: README.md  lstm.README.md  lstm.clip.pt  lstm.dino.pt  lstm.i3d.pt  lstm.r3d.pt  lstm.s3d-h.pt  lstm.s3d-k.pt  lstm.slowfast.pt  lstm.vivit.pt  lstm.x3d-l.pt  lstm.x3d-m.pt  lstm.x3d-s.pt  lstm.x3d-xs.pt  lstm.yolo.pt  mlp.README.md  mlp.clip.pt  mlp.dino.pt  mlp.i3d.pt  mlp.r3d.pt  mlp.s3d-h.pt  mlp.s3d-k.pt  mlp.slowfast.pt  mlp.vivit.pt  mlp.x3d-l.pt  mlp.x3d-m.pt  mlp.x3d-s.pt  mlp.x3d-xs.pt  mlp.yolo.pt  model.README.md
report/: references.bib
reports/final-presentation/: index.tex
reports/final-presentation/frames/: 0-title-page.tex  1-outline.tex  (+11 more)
reports/final-report/: README.md  index.tex  references.bib
reports/midterm-presentation/: index.tex  references.bib
utils/: __init__.py  early_stopper.py  transformers.py
weights/: s3d-howto100m.pt  s3d-kinetics400.pt  s3d_dict.npy
(+41 files in other folders)
