[tool.poetry]
name = "chambery"
version = "0.1.0"
description = "video-action-segmentation"
authors = ["Kichou Nadir <nadirkichou@hotmail.fr>"]
readme = "README.md"

packages = [
    { include = "chambery", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.9.9"
ultralytics = "^8.3.32"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
tqdm = "^4.67.0"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
ftfy = "^6.3.1"
regex = "^2024.11.6"
clip = {git = "https://github.com/openai/CLIP.git"}
openpyxl = "^3.1.5"
fvcore = "^0.1.5.post20221221"
av = "^14.0.1"
ecdsa = "^0.19.0"
base58 = "^2.1.1"
pytorchvideo = "^0.1.5"
python-dotenv = "^1.0.1"
ffmpeg-python = "^0.2.0"
nameparser = "^1.1.3"
timm = "^1.0.14"
bitcoinlib = "^0.7.1"
ipykernel = "^6.29.5"
transformers = "^4.49.0"
open-clip-torch = "^2.31.0"
tas-helpers = {git = "https://github.com/raideno/tas-helpers.git"}
video-dataset = "0.3.0.dev20250308093214"
timesformer = {git = "https://github.com/facebookresearch/TimeSformer"}
simplejson = "^3.20.1"
data-augmentation = {git = "https://github.com/raideno/data-augmentation.git"}
cached-dataset = {git = "https://github.com/raideno/cached-dataset.git"}

[tool.poetry.scripts]
main = "chambery.index:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
