[tool.poetry]
name = "bouldering_video_segmentation"
version = "0.1.0"
description = "video-action-segmentation"
authors = ["Kichou Nadir <nadirkichou@hotmail.fr>"]
readme = "README.md"

packages = [
    { include = "bouldering_video_segmentation", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.9.9"
tqdm = "^4.67.0"
ultralytics = "^8.3.32"
scikit-learn = "^1.5.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
clip = {git = "https://github.com/openai/CLIP.git"}
pytorchvideo = "^0.1.5"
transformers = "^4.49.0"
open-clip-torch = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.experiments.dependencies]
tueplots = "^0.2.0"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
ftfy = "^6.3.1"
regex = "^2024.11.6"
openpyxl = "^3.1.5"
fvcore = "^0.1.5.post20221221"
av = "^14.0.1"
timm = "^1.0.14"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
ffmpeg-python = "^0.2.0"
nameparser = "^1.1.3"
scienceplots = "^2.1.1"
cached-dataset = {git = "https://github.com/raideno/cached-dataset.git"}
video-dataset = "0.3.0.dev20250316222650"
tas-helpers = {git = "https://github.com/raideno/tas-helpers.git"}
timesformer = {git = "https://github.com/facebookresearch/TimeSformer"}
simplejson = "^3.20.1"
data-augmentation = {git = "https://github.com/raideno/data-augmentation.git"}
mpl-sizes = "^0.0.2"
latextable = "^1.0.1"
texttable = "^1.7.0"
prettytable = "^3.15.1"

[tool.poetry.scripts]
main = "chambery.index:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
